# actix-web-tonic

./: Cargo.toml  LICENSE.md  README.md  rustfmt.toml
examples/simple/: Cargo.toml  build.rs
examples/simple/proto/: helloworld.proto
examples/simple/src/: actix_impl.rs  main.rs  parse_args.rs  tonic_impl.rs
src/: error.rs  lib.rs
src/async_runner/: mod.rs  runner_actix_web.rs  runner_tonic.rs
