[package]
name = "actix-web-tonic"
description = "actix-web and tonic concurrent runner"
version = "0.1.0"
edition = "2021"

[dependencies]
# tonic
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
# actix-web
actix-web = "4.0.1"
actix-http = "3.0.4"
actix-service = "2.0.2"
# actix-web-tonic
thiserror = "1.0.31"
const_format = "0.2.22"
futures = "0.3.21"
to_unit = "1.0.2"
retrieve = "1.1.0"
log = "0.4.16"

[build-dependencies]
tonic-build = "0.7"
