[package]
name = "actix-web-tonic"
description = "actix-web and tonic concurrent runner"
authors = ["USAGI.NETWORK / Usagi Ito <the@usagi.network>"]
categories = [
 "network-programming",
 "asynchronous",
 "web-programming::http-server",
 "web-programming::websocket",
 "web-programming"
]
documentation = "https://docs.rs/actix-web-tonic/"
keywords = ["actix", "tonic", "actix-web", "concurrent", "grpc"]
license = "MIT"
repository = "https://github.com/usagi/actix-web-tonic"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.8", features = ["tls", "tls-roots", "prost"] }
prost = "0.11"
actix-web = "4.2.1"
actix-http = "3.2.2"
actix-service = "2.0.2"
thiserror = "1.0.31"
const_format = "0.2.22"
futures = "0.3.21"
to_unit = "1.0.2"
retrieve = "1.1.0"
log = "0.4.16"

[build-dependencies]
tonic-build = "0.8"
